

    Bugfixes (for details and complete list have a look to the git repository)
    -------------------------------------------------------------------------------
    - Replenish process with complete unit loads did not handle reservations and strategy date
    - Do not allow negative reservation amounts


    Database changes
    -------------------------------------------------------------------------------



Release 2.9
-----------

    Main topics
    -------------------------------------------------------------------------------
    - Lifting capacities for rack-fields and -sections
    - Added usable storage areas to storage strategy
    - Limit the maximum number/amount of stocks of an item within a storage area
    - Prefer complete unit loads with same strategy date in pick generation
    - Prefer picking of packaging units from chaotical picking locations


    Functional changes (for details and complete list have a look to the git repository)
    -------------------------------------------------------------------------------


    Technical changes (for details and complete list have a look to the git repository)
    -------------------------------------------------------------------------------


    Bugfixes (for details and complete list have a look to the git repository)
    -------------------------------------------------------------------------------
    - Fixed error when deleting a capacity
    - Fixed error when filtering in mobile dialog 'Goods Receipt & Storage'
    - Added missing picked bestbefore to pickingorderline


    Database changes
    -------------------------------------------------------------------------------
    - Table StorageLocation got new attributes
    - Table LocationType got new attributes
    - Table StorageStrategy got new attributes
    - Added table StorageArea
    - Added table StorageStrategyArea
    - Added table ItemDataArea
    - Added new field to PickingOrderLine