@@ -534,6 +534,7 @@ Release 2.9
     - Fixed error when deleting a capacity
     - Fixed error when filtering in mobile dialog 'Goods Receipt & Storage'
     - Added missing picked bestbefore to pickingorderline
+    - Fixed error when filtering for a client in the rich-client dialog to add an advice to a goods receipt
 
 
     Database changes
